[package]
name = "rust-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
itertools = "0.10.5"
nom = "7.1.3"
range_union_find = "0.4.4"
rayon = "1.6.1"
regex = "1.7.3"
strum = "0.24.1"
strum_macros = "0.24.3"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "day_13_part_1_bench"
harness = false
