[package]
name = "rust-advent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
itertools = "0.11.0"
memoize = "0.4.0"
ndarray = "0.15.6"
nom = "7.1.3"
num-rational = "0.4.1"
once_cell = "1.18.0"
proptest = "1.2.0"
rand = "0.8.5"
range_union_find = "0.5.0"
rayon = "1.7.0"
regex = "1.9.1"
strum = "0.25.0"
strum_macros = "0.25.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "day_13_part_1_bench"
harness = false
